refactoring componente cardio

--- a/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
@@ -8,17 +8,17 @@
 
                 <mat-card>
                     <mat-card-header [routerLink]="['/astryh']">
-                        <mat-card-subtitle i18n="Subtitle">Astrand-Ryhming - 6 minutos</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Astrand-Ryhming</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/balke']">
-                        <mat-card-subtitle i18n="Subtitle">Balke e Ware - feminino</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Balke e Ware</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/ymca']">
-                        <mat-card-subtitle i18n="Subtitle">YMCA - Golding, Myers & Sinning - masculino</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">YMCA - Golding, Myers & Sinning</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
 
