--- a/src/app/avaliation/dobras/jp7/jp7.component.html
+++ b/src/app/avaliation/dobras/jp7/jp7.component.html
@@ -39,7 +39,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Subescalar')">Subescalar</span></th>
+                        <th i18n><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                         <td *ngIf="addEval">
