--- a/src/app/avaliation/CardioPulmunar/astrand-ryhming/astrand-ryhming.component.html
+++ b/src/app/avaliation/CardioPulmunar/astrand-ryhming/astrand-ryhming.component.html
@@ -9,6 +9,7 @@
             <input type="hidden" name="peso" #peso="ngModel" [ngModel]="newEvaluation.peso">
             <input type="hidden" name="idade" #idade="ngModel" [ngModel]="newEvaluation.idade">
             <input type="hidden" name="sexo" #sexo="ngModel" [ngModel]="newEvaluation.sexo">
+            <input type="hidden" name="fc2" #fc2="ngModel" [ngModel]="newEvaluation.fc2">
             <table class="section-table">
                 <thead>
                     <tr>
@@ -63,7 +64,8 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min6}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min6}}</td>
                         <td *ngIf="addEval">
-                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number" step="0.1">
+                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number"
+                                step="0.1">
                         </td>
                     </tr>
                     <tr>
@@ -71,7 +73,8 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min8}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min8}}</td>
                         <td *ngIf="addEval">
-                            <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number" step="0.1">
+                            <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number"
+                                step="0.1">
                         </td>
                     </tr>
                     <tr>
@@ -79,7 +82,8 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min10}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min10}}</td>
                         <td *ngIf="addEval">
-                            <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number" step="0.1">
+                            <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number"
+                                step="0.1">
                         </td>
                     </tr>
                     <tr>
@@ -89,6 +93,43 @@
                         <td *ngIf="addEval">
                             <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" step="0.1">
                         </td>
+                    </tr>
+                    <!--  resultados -->
+                    <tr>
+                        <th i18n>FC Estimada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>FC Reserva</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcreserva}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>% FC Máx. Alcançada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>Indice Aeróbico Funcional</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fai}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fai}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx. Estimado</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2e}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2e}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx Obtido</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2m}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2m}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                 </tbody>
             </table>
