--- a/src/app/avaliation/CardioPulmunar/balke-ware/balke-ware.component.html
+++ b/src/app/avaliation/CardioPulmunar/balke-ware/balke-ware.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3 i18n>Bicicleta - Balke e Ware, (1954) - masculino</h3>
+        <h3 i18n>Bicicleta - Balke e Ware, (1954)</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -9,6 +9,7 @@
             <input type="hidden" name="peso" #peso="ngModel" [ngModel]="newEvaluation.peso">
             <input type="hidden" name="idade" #idade="ngModel" [ngModel]="newEvaluation.idade">
             <input type="hidden" name="sexo" #sexo="ngModel" [ngModel]="newEvaluation.sexo">
+            <input type="hidden" name="fc2" #fc2="ngModel" [ngModel]="newEvaluation.fc2">
             <table class="section-table">
                 <thead>
                     <tr>
@@ -30,7 +31,7 @@
                             <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number"
                                 step="0.1">
                         </td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 0</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min0}}</td>
@@ -57,15 +58,16 @@
                             <input name="min4" #min4="ngModel" [(ngModel)]="newEvaluation.min4" type="number"
                                 step="0.1">
                         </td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 6</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min6}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min6}}</td>
                         <td *ngIf="addEval">
-                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number" step="0.1">
+                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number"
+                                step="0.1">
                         </td>
-                    </tr> 
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 8</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min8}}</td>
@@ -83,15 +85,16 @@
                             <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number"
                                 step="0.1">
                         </td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 12</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min12}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min12}}</td>
                         <td *ngIf="addEval">
-                            <input name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number" step="0.1">
+                            <input name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number"
+                                step="0.1">
                         </td>
-                    </tr>    
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 14</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min14}}</td>
@@ -109,15 +112,53 @@
                             <input name="min16" #min16="ngModel" [(ngModel)]="newEvaluation.min16" type="number"
                                 step="0.1">
                         </td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 18</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min18}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min18}}</td>
                         <td *ngIf="addEval">
-                            <input name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="number" step="0.1">
+                            <input name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="number"
+                                step="0.1">
                         </td>
-                    </tr>                    
+                    </tr>
+                    <!--  resultados -->
+                    <tr>
+                        <th i18n>FC Estimada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>FC Reserva</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcreserva}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>% FC Máx. Alcançada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>Indice Aeróbico Funcional</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fai}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fai}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx. Estimado</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2e}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2e}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx Obtido</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2m}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2m}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
                 </tbody>
             </table>
 
@@ -152,8 +193,3 @@
         </a>
     </div>
 </div>
-
-
-
-
-
