--- a/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
+++ b/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
@@ -9,19 +9,20 @@
             <input type="hidden" name="peso" #peso="ngModel" [ngModel]="newEvaluation.peso">
             <input type="hidden" name="idade" #idade="ngModel" [ngModel]="newEvaluation.idade">
             <input type="hidden" name="sexo" #sexo="ngModel" [ngModel]="newEvaluation.sexo">
+            <input type="hidden" name="fc2" #fc2="ngModel" [ngModel]="newEvaluation.fc2">
             <table class="section-table">
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
                         <th class="th-top" *ngIf="pointer>=1">
-                                {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                            {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
                         </th>
                         <th class="th-top" *ngIf="pointer>=0">
-                                {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                            {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
                         </th>
                         <th class="th-top" *ngIf="addEval">
                             <input name="data" #data="ngModel" [ngModel]="newEvaluation.data" type="date"
-                             style="width: 110px;" readonly>
+                                style="width: 110px;" readonly>
                         </th>
                     </tr>
                 </thead>
@@ -34,7 +35,7 @@
                             <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number"
                                 step="0.1">
                         </td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 2'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min2}}</td>
@@ -61,7 +62,7 @@
                             <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number"
                                 step="0.1">
                         </td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 8'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min8}}</td>
@@ -70,7 +71,7 @@
                             <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number"
                                 step="0.1">
                         </td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <th i18n>FC ao minuto 10'</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min10}}</td>
@@ -85,8 +86,7 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
                         <td *ngIf="addEval">
-                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
-                                step="0.1">
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" step="0.1">
                         </td>
                     </tr>
                     <tr>
@@ -94,10 +94,47 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].distancia}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].distancia}}</td>
                         <td *ngIf="addEval">
-                            <input name="distancia" #distancia="ngModel" [(ngModel)]="newEvaluation.distancia" type="number"
-                                step="0.1">
+                            <input name="distancia" #distancia="ngModel" [(ngModel)]="newEvaluation.distancia"
+                                type="number" step="0.1">
                         </td>
-                    </tr>                      
+                    </tr>
+                    <!--  resultados -->
+                    <tr>
+                        <th i18n>FC Estimada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>FC Reserva</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcreserva}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>% FC Máx. Alcançada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>Indice Aeróbico Funcional</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fai}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fai}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx. Estimado</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2e}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2e}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx Obtido</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2m}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2m}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
                 </tbody>
             </table>
 
@@ -132,6 +169,3 @@
         </a>
     </div>
 </div>
-
-
-
