--- a/src/app/avaliation/CardioPulmunar/george/george.component.html
+++ b/src/app/avaliation/CardioPulmunar/george/george.component.html
@@ -10,6 +10,7 @@
             <input type="hidden" name="idade" #idade="ngModel" [ngModel]="newEvaluation.idade">
             <input type="hidden" name="sexo" #sexo="ngModel" [ngModel]="newEvaluation.sexo">
             <input type="hidden" name="imc" #imc="ngModel" [ngModel]="newEvaluation.imc">
+            <input type="hidden" name="fc2" #fc2="ngModel" [ngModel]="newEvaluation.fc2">
             <table class="section-table">
                 <thead>
                     <tr>
@@ -28,17 +29,54 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_tempo | mask: '00:00'}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_tempo | mask: '00:00'}}</td>
                         <td *ngIf="addEval">
-                            <input name="c_tempo" mask="00:00" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" placeholder="mm:ss">
+                            <input name="c_tempo" mask="00:00" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo"
+                                placeholder="mm:ss">
                         </td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <th i18n>FC Final</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
                         <td *ngIf="addEval">
-                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
-                                step="0.1">
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" step="0.1">
                         </td>
+                    </tr>
+                    <!--  resultados -->
+                    <tr>
+                        <th i18n>FC Estimada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>FC Reserva</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcreserva}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>% FC Máx. Alcançada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>Indice Aeróbico Funcional</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fai}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fai}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx. Estimado</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2e}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2e}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx Obtido</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2m}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2m}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                 </tbody>
             </table>
@@ -76,8 +114,10 @@
                 <mat-card-content>
                     <p><strong>Destinado a: </strong> jovens e adultos, sedentários ou ativos.</p>
                     <p><strong>Faixa etária:</strong> 18 a 29 anos.</p>
-                    <p><strong>Objetivo:</strong> Correr num ritmo confortável  e moderado com o tempo de prova de 8 minutos
-                         para homens e 9 minutos para mulher. A FC deve ser medida no final do teste e não deverá ultrapassar as 180bpm.</p>
+                    <p><strong>Objetivo:</strong> Correr num ritmo confortável e moderado com o tempo de prova de 8
+                        minutos
+                        para homens e 9 minutos para mulher. A FC deve ser medida no final do teste e não deverá
+                        ultrapassar as 180bpm.</p>
                 </mat-card-content>
             </mat-card>
         </div>
@@ -89,6 +129,3 @@
         </a>
     </div>
 </div>
-
-
-
