--- a/src/app/avaliation/CardioPulmunar/george2/george2.component.html
+++ b/src/app/avaliation/CardioPulmunar/george2/george2.component.html
@@ -10,6 +10,7 @@
             <input type="hidden" name="idade" #idade="ngModel" [ngModel]="newEvaluation.idade">
             <input type="hidden" name="sexo" #sexo="ngModel" [ngModel]="newEvaluation.sexo">
             <input type="hidden" name="imc" #imc="ngModel" [ngModel]="newEvaluation.imc">
+            <input type="hidden" name="fc2" #fc2="ngModel" [ngModel]="newEvaluation.fc2">
             <table class="section-table">
                 <thead>
                     <tr>
@@ -22,7 +23,7 @@
                         </th>
                     </tr>
                 </thead>
-                <tbody> 
+                <tbody>
                     <tr>
                         <th i18n>Velocidade</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vm}}</td>
@@ -31,23 +32,52 @@
                             <input name="c_vm" #c_vm="ngModel" [(ngModel)]="newEvaluation.c_vm" type="number"
                                 step="0.1">
                         </td>
-                    </tr>              
+                    </tr>
                     <tr>
                         <th i18n>FC Final</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
                         <td *ngIf="addEval">
-                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
-                                step="0.1">
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" step="0.1">
                         </td>
                     </tr>
+
+                    <!--  resultados -->
                     <tr>
-                        <th i18n>Tempo</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_tempo | mask: '00:00'}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_tempo | mask: '00:00'}}</td>
-                        <td *ngIf="addEval">
-                            <input name="c_tempo" mask="00:00" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" placeholder="mm:ss">
-                        </td>
+                        <th i18n>FC Estimada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>FC Reserva</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcreserva}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>% FC Máx. Alcançada</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>Indice Aeróbico Funcional</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fai}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fai}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx. Estimado</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2e}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2e}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <th i18n>VO2 Máx Obtido</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2m}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2m}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                 </tbody>
             </table>
@@ -76,7 +106,7 @@
         <div class="charts" *ngIf="refresh">
             <app-chart-cardio [evaluation]="evaluation" [protocolo]="protocolo"></app-chart-cardio>
         </div>
-                
+
         <div class="section-info">
             <mat-card>
                 <mat-card-header>
@@ -85,9 +115,12 @@
                 <mat-card-content>
                     <p><strong>Destinado a: </strong> jovens e adultos, sedentários ou ativos.</p>
                     <p><strong>Faixa etária:</strong> 18 a 28 anos.</p>
-                    <p><strong>Objetivo:</strong> Este protocolo é constituido por um aquecimento de 3 minutos (caminhada rápida) e 
-                    em seguida ajusta-se a velocidade (auto selecionada) para correr num ritmo confortável entre 6.9 a 12Km/h, 
-                não ultrapassando os 10.4Km/h no caso de mulheres ou 12Km/h no caso de homens, por mais 3 minutos</p>
+                    <p><strong>Objetivo:</strong> Este protocolo é constituido por um aquecimento de 3 minutos
+                        (caminhada rápida) e
+                        em seguida ajusta-se a velocidade (auto selecionada) para correr num ritmo confortável entre 6.9
+                        a 12Km/h,
+                        não ultrapassando os 10.4Km/h no caso de mulheres ou 12Km/h no caso de homens, por mais 3
+                        minutos</p>
                 </mat-card-content>
             </mat-card>
         </div>
@@ -99,7 +132,3 @@
         </a>
     </div>
 </div>
-
-
-
-
