--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -66,17 +66,17 @@
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/imc/">
-                        <mat-card-subtitle i18n="Subtitle">Indice Massa Corporal</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Indice Massa Corporal (IMC)</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/ircq/">
-                        <mat-card-subtitle i18n="Subtitle">Indice Relação Cintura/Quadril</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Indice Relação Cintura/Quadril (IRCQ)</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/ic/">
-                        <mat-card-subtitle i18n="Subtitle">Indice de Conicidade</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Indice de Conicidade (IC)</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
