--- a/src/app/commun/menu/menu.component.html
+++ b/src/app/commun/menu/menu.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="menu-toolbar" color="primary">
-    <span><a routerLink="/dash">ALPHA PRO</a></span>
+    <span><a routerLink="/dash">ALPHA PRO SYSTEM</a></span>
     <span class="menu-spacer"></span>
     <span class="menu-username" *ngIf="selectedStudent.id"><a routerLink="/new/{{selectedStudent.id}}">{{selectedStudent.nome}}</a></span>
     <a [routerLink]="['/menuDash/']">
