--- a/src/app/dashboard/dash/dash.component.html
+++ b/src/app/dashboard/dash/dash.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="dash-form">
-        <h2 class="title">ALPHA PRO</h2>
+        <h2 class="title">ALPHA PRO SYSTEM</h2>
 
         
         <!-- Selecionar Aluno -->
