--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="login-form">
       <form class="center-form panel" #f="ngForm" (submit)="submit(f.value)">
-        <h2 class="title">ALPHA PRO</h2>
+        <h2 class="title">ALPHA PRO SYSTEM</h2>
   
         <mat-form-field class="center-full-width">
           <input i18n="Utilizador | utilizador login" matInput placeholder="Utilizador" #user ngModel name="username" value="" required>
