--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -25,14 +25,14 @@
                 <mat-checkbox i18n="Label" #QEST="ngModel" name="QEST" [(ngModel)]="student.QEST">Estético
                 </mat-checkbox>
                 <div *ngIf="QEST.value" style="margin-left: 25px;">
-                  <mat-checkbox i18n="Label" #Q201="ngModel" name="Q201"
-                    [(ngModel)]="student.Q201">Hipertrofia muscular</mat-checkbox>
-                  <mat-checkbox i18n="Label" #Q13="ngModel" name="Q13"
-                    [(ngModel)]="student.Q13">
+                  <mat-checkbox i18n="Label" #Q201="ngModel" name="Q201" [(ngModel)]="student.Q201">Hipertrofia muscular
+                  </mat-checkbox>
+                  <mat-checkbox i18n="Label" #Q13="ngModel" name="Q13" [(ngModel)]="student.Q13">
                     Emagrecimento</mat-checkbox>
                 </div>
                 <mat-checkbox i18n="Label" #Q16="ngModel" name="Q16" [(ngModel)]="student.Q16">Prevenção</mat-checkbox>
-                <mat-checkbox i18n="Label" #Q20="ngModel" name="Q20" [(ngModel)]="student.Q20">Alto Rendimento</mat-checkbox>
+                <mat-checkbox i18n="Label" #Q20="ngModel" name="Q20" [(ngModel)]="student.Q20">Alto Rendimento
+                </mat-checkbox>
                 <mat-checkbox i18n="Label" #Q14="ngModel" name="Q14" [(ngModel)]="student.Q14">Lazer</mat-checkbox>
                 <mat-checkbox i18n="Label" #Q17="ngModel" name="Q17" [(ngModel)]="student.Q17">Condincionamento Fisico
                   Geral</mat-checkbox>
@@ -107,7 +107,7 @@
           </mat-panel-description>
         </mat-expansion-panel-header>
         <form #fev="ngForm" (submit)="saveEstiloVida(fev.value)">
-        
+
           <mat-card>
             <mat-card-header>
               <mat-card-subtitle i18n="Label">Nível de Actividade Fisica</mat-card-subtitle>
@@ -141,9 +141,11 @@
                 </mat-tab>
                 <mat-tab label=" C">
 
-                  <p i18n>Participa regularmente em exercícios físicos pesados, como corridas ou trotes, natação, ciclismo,
-                     remo, pular corda, corrida estacionária, ou se engaja em exercícios com atividades aeróbias vigorosas 
-                     como ténis ou basquetebol..</p>
+                  <p i18n>Participa regularmente em exercícios físicos pesados, como corridas ou trotes, natação,
+                    ciclismo,
+                    remo, pular corda, corrida estacionária, ou se engaja em exercícios com atividades aeróbias
+                    vigorosas
+                    como ténis ou basquetebol..</p>
                   <mat-radio-group aria-label="Select an option" #nafs="ngModel" name="nafs" [(ngModel)]="student.nafs">
                     <mat-radio-button value="4" i18n>Corre menos de 1,6Km por semana ou gasta menos de 30 minutos<br />
                       por
@@ -171,17 +173,20 @@
             <mat-card-content>
               <mat-radio-group #classe="ngModel" name="classe" [(ngModel)]="student.classe">
                 <mat-radio-button i18n value="1">
-                  Iniciante <span (click)="openDialogHelp('Iniciante', 'Sujeito sedentário, que nunca fez ou que está a mais de 6 meses sem fazer um programa de exercícios físicos regular, pelo menos 2 vezes semanais.', '')">
+                  Iniciante <span
+                    (click)="openDialogHelp('Iniciante', 'Sujeito sedentário, que nunca fez ou que está a mais de 6 meses sem fazer um programa de exercícios físicos regular, pelo menos 2 vezes semanais.', '')">
                     <small style="color: blue; text-decoration: underline; cursor: pointer;">+ info</small>
-                  </span> 
-                </mat-radio-button> 
+                  </span>
+                </mat-radio-button>
                 <mat-radio-button i18n value="2">
-                  Intermediário <span (click)="openDialogHelp('Intermediário', 'Sujeito ativo, que frequenta um programa de exercício físico irregularmente (não muito assíduo) há mais de 6 meses entre 2 a 3 vezes por semana. Realiza exercícios de baixa/média intensidade (respiração aumentada e capaz de calar) entre 100 a 150 min por semana.', '')">
+                  Intermediário <span
+                    (click)="openDialogHelp('Intermediário', 'Sujeito ativo, que frequenta um programa de exercício físico irregularmente (não muito assíduo) há mais de 6 meses entre 2 a 3 vezes por semana. Realiza exercícios de baixa/média intensidade (respiração aumentada e capaz de calar) entre 100 a 150 min por semana.', '')">
                     <small style="color: blue; text-decoration: underline; cursor: pointer;">+ info</small>
-                  </span> 
+                  </span>
                 </mat-radio-button>
                 <mat-radio-button i18n value="3">
-                  Avançado <span (click)="openDialogHelp('Avançado', 'Atleta ou sujeito que pratica um programa de exercício físico de forma regular há mais de 1 ano, com frequência semanal de 3 ou mais vezes. Realiza exercícios vigorosos (respiração rápida e dificuldade de falar) pelo menos 75 minutos por semana.', '')">
+                  Avançado <span
+                    (click)="openDialogHelp('Avançado', 'Atleta ou sujeito que pratica um programa de exercício físico de forma regular há mais de 1 ano, com frequência semanal de 3 ou mais vezes. Realiza exercícios vigorosos (respiração rápida e dificuldade de falar) pelo menos 75 minutos por semana.', '')">
                     <small style="color: blue; text-decoration: underline; cursor: pointer;">+ info</small>
                   </span>
                 </mat-radio-button>
@@ -371,11 +376,10 @@
               <!-- cardiopatia -->
               <mat-checkbox i18n #Q31="ngModel" name="Q31" [(ngModel)]="student.Q31">Cardiopatia</mat-checkbox>
               <mat-form-field class="" *ngIf="Q31.value">
-
                 <mat-label i18n="Label">Grau de parentesco</mat-label>
-                <mat-select  i18n placeholder="selecione" multiple #cardParentesco="ngModel" 
-                             name="cardParentesco" [(ngModel)]="Parentesco.Cardio" 
-                             (selectionChange)="showCardParent(cardParentesco.value, 'Cardiopatia')">
+                <mat-select i18n placeholder="selecione" multiple #cardParentesco="ngModel" name="cardParentesco"
+                  [(ngModel)]="Parentesco.Cardio"
+                  (selectionChange)="showCardParent(cardParentesco.value, 'Cardiopatia')">
                   <mat-option value="Pai">Pai</mat-option>
                   <mat-option value="Mãe">Mãe</mat-option>
                   <mat-option value="Avô Paterno">Avô Paterno</mat-option>
@@ -385,61 +389,93 @@
                 </mat-select>
               </mat-form-field>
               <ul *ngIf="Q31.value">
-                <li *ngFor="let p of CardioParentesco" style="width: 100%; display: inline-flex; justify-items: space-between;">
-                    <span style="width: 130px;">{{p.parentesco}}</span>
-                    <mat-checkbox style="display: inline; justify-content: end;" #mais60="ngModel" 
-                                  name="mais60" [(ngModel)]="p.mais60" value="1" color="primary">
-                                      mais de 60 anos
-                    </mat-checkbox>
-                  </li>
+                <li *ngFor="let p of CardioParentesco; let i=index;"
+                  style="width: 100%; display: inline-flex; justify-items: space-between;">
+                  <span style="width: 130px;">{{p.parentesco}}</span>
+                  <mat-checkbox name="maior60{{i}}" [(ngModel)]="p.maior60" color="primary"
+                    style="display: inline; justify-content: end;">
+                    mais de 60 anos
+                  </mat-checkbox>
+                </li>
               </ul>
               <!-- hipertensão -->
               <mat-checkbox i18n="Label" #Q32="ngModel" name="Q32" [(ngModel)]="student.Q32">Hipertensão</mat-checkbox>
               <mat-form-field class="" *ngIf="Q32.value">
                 <mat-label i18n="Label">Grau de parentesco</mat-label>
-                <mat-select  i18n placeholder="selecione" multiple #hipParentesco="ngModel" 
-                             name="hipParentesco" [(ngModel)]="Parentesco.Hipertensao" 
-                             (selectionChange)="showHiperParent(hipParentesco.value, 'Hipertensão')">
+                <mat-select i18n placeholder="selecione" multiple #hipParentesco="ngModel" name="hipParentesco"
+                  [(ngModel)]="Parentesco.Hipertensao"
+                  (selectionChange)="showHiperParent(hipParentesco.value, 'Hipertensão')">
                   <mat-option value="Pai">Pai</mat-option>
                   <mat-option value="Mãe">Mãe</mat-option>
                   <mat-option value="Avô Paterno">Avô Paterno</mat-option>
                   <mat-option value="Avó Paterna">Avó Paterna</mat-option>
                   <mat-option value="Avô Materno">Avô Materno</mat-option>
                   <mat-option value="Avó Materna">Avó Materna</mat-option>
-                  </mat-select>
+                </mat-select>
               </mat-form-field>
-              <ul *ngIf="Q31.value">
-                <li *ngFor="let p of HiperParentesco" style="width: 100%; display: inline-flex; justify-items: space-between;">
-                    <span style="width: 130px;">{{p.parentesco}}</span>
-                    <mat-checkbox style="display: inline; justify-content: end;" #mais60="ngModel" 
-                                  name="mais60" [(ngModel)]="p.mais60" value="1" color="primary">
-                                      mais de 60 anos
-                    </mat-checkbox>
-                  </li>
+              <ul *ngIf="Q32.value">
+                <li *ngFor="let p of HiperParentesco; let k=index;"
+                  style="width: 100%; display: inline-flex; justify-items: space-between;">
+                  <span style="width: 130px;">{{p.parentesco}}</span>
+                  <mat-checkbox style="display: inline; justify-content: end;" name="maior60{{k + 6}}"
+                    [(ngModel)]="p.maior60" color="primary">
+                    mais de 60 anos
+                  </mat-checkbox>
+                </li>
               </ul>
 
 
-
-              <mat-checkbox i18n #Q33="ngModel" name="Q33" [(ngModel)]="student.Q33">Diabetes</mat-checkbox>
+              <!-- Diabetes -->
+              <mat-checkbox i18n="Label" #Q33="ngModel" name="Q33" [(ngModel)]="student.Q33">Diabetes</mat-checkbox>
               <mat-form-field class="" *ngIf="Q33.value">
                 <mat-label i18n="Label">Grau de parentesco</mat-label>
-                <input matInput i18n placeholder="Ex. Pai, Avó" #Q33Q="ngModel" name="Q33Q" [(ngModel)]="student.Q33Q">
+                <mat-select i18n placeholder="selecione" multiple #diabetesParentesco="ngModel" name="diabetesParentesco"
+                  [(ngModel)]="Parentesco.Diabetes"
+                  (selectionChange)="showDiabetesParent(diabetesParentesco.value, 'Diabetes')">
+                  <mat-option value="Pai">Pai</mat-option>
+                  <mat-option value="Mãe">Mãe</mat-option>
+                  <mat-option value="Avô Paterno">Avô Paterno</mat-option>
+                  <mat-option value="Avó Paterna">Avó Paterna</mat-option>
+                  <mat-option value="Avô Materno">Avô Materno</mat-option>
+                  <mat-option value="Avó Materna">Avó Materna</mat-option>
+                </mat-select>
               </mat-form-field>
-              <mat-form-field class="input-sm" *ngIf="Q33.value">
-                <mat-label i18n="Label">&gt; de 60 anos</mat-label>
-                <input matInput placeholder="quantos" #Q33QTDE="ngModel" name="Q33QTDE" [(ngModel)]="student.Q33QTDE">
-              </mat-form-field>
+              <ul *ngIf="Q33.value">
+                <li *ngFor="let p of DiabetesParentesco; let k=index;"
+                  style="width: 100%; display: inline-flex; justify-items: space-between;">
+                  <span style="width: 130px;">{{p.parentesco}}</span>
+                  <mat-checkbox style="display: inline; justify-content: end;" name="maior60{{k + 12}}"
+                    [(ngModel)]="p.maior60" color="primary">
+                    mais de 60 anos
+                  </mat-checkbox>
+                </li>
+              </ul>
 
-
-              <mat-checkbox i18n="Label" #Q34="ngModel" name="Q34" [(ngModel)]="student.Q34">Outra doença</mat-checkbox>
+              <!-- OutraDoenca -->
+              <mat-checkbox i18n="Label" #Q34="ngModel" name="Q34" [(ngModel)]="student.Q34">OutraDoenca</mat-checkbox>
               <mat-form-field class="" *ngIf="Q34.value">
                 <mat-label i18n="Label">Grau de parentesco</mat-label>
-                <input matInput placeholder="Ex. Pai, Avó" #Q34Q="ngModel" name="Q34Q" [(ngModel)]="student.Q34Q">
+                <mat-select i18n placeholder="selecione" multiple #outraDoencaParentesco="ngModel" name="outraDoencaParentesco"
+                  [(ngModel)]="Parentesco.OutraDoenca"
+                  (selectionChange)="showOutraDoencaParent(outraDoencaParentesco.value, 'OutraDoenca')">
+                  <mat-option value="Pai">Pai</mat-option>
+                  <mat-option value="Mãe">Mãe</mat-option>
+                  <mat-option value="Avô Paterno">Avô Paterno</mat-option>
+                  <mat-option value="Avó Paterna">Avó Paterna</mat-option>
+                  <mat-option value="Avô Materno">Avô Materno</mat-option>
+                  <mat-option value="Avó Materna">Avó Materna</mat-option>
+                </mat-select>
               </mat-form-field>
-              <mat-form-field class="input-sm" *ngIf="Q34.value">
-                <mat-label i18n="Label">&gt; de 60 anos</mat-label>
-                <input matInput placeholder="quantos" #Q34QTDE="ngModel" name="Q34QTDE" [(ngModel)]="student.Q34QTDE">
-              </mat-form-field>
+              <ul *ngIf="Q34.value">
+                <li *ngFor="let p of OutraDoencaParentesco; let k=index;"
+                  style="width: 100%; display: inline-flex; justify-items: space-between;">
+                  <span style="width: 130px;">{{p.parentesco}}</span>
+                  <mat-checkbox style="display: inline; justify-content: end;" name="maior60{{k + 18}}"
+                    [(ngModel)]="p.maior60" color="primary">
+                    mais de 60 anos
+                  </mat-checkbox>
+                </li>
+              </ul>
               <mat-form-field class="input-lg" *ngIf="Q34.value">
                 <mat-label i18n="Label">Descrição da doença</mat-label>
                 <input matInput placeholder="" #Q34RESP="ngModel" name="Q34RESP" [(ngModel)]="student.Q34RESP">
@@ -483,7 +519,7 @@
               <br />
               <mat-form-field class="input-md" *ngIf="fumante.value=='S' || fumante.value=='E'">
                 <mat-label i18n>Quantos por dia?</mat-label>
-                <input matInput  class="input-md" i18n placeholder="nº de cigarros" #qtos="ngModel" name="qtos"
+                <input matInput class="input-md" i18n placeholder="nº de cigarros" #qtos="ngModel" name="qtos"
                   [(ngModel)]="student.qtos">
               </mat-form-field>
               <mat-label i18n *ngIf="fumante.value=='S' || fumante.value=='E'">Há quanto tempo?</mat-label>
@@ -532,7 +568,7 @@
               </mat-form-field>
               <mat-form-field class="input-md" *ngIf="Q4BB.value==1">
                 <mat-label i18n>Quantas vezes por semana?</mat-label>
-                <input matInput  class="input-md" i18n placeholder="vezes" #Q4BBVEZES="ngModel" name="Q4BBVEZES"
+                <input matInput class="input-md" i18n placeholder="vezes" #Q4BBVEZES="ngModel" name="Q4BBVEZES"
                   [(ngModel)]="student.Q4BBVEZES">
               </mat-form-field>
               <mat-form-field class="input-lg">
@@ -554,7 +590,8 @@
               </mat-radio-group>
               <mat-form-field appearance="">
                 <mat-label i18n="Label">Data do ultimo exame</mat-label>
-                <input matInput #Q4BDATA="ngModel" name="Q4BDATA" [(ngModel)]="student.Q4BDATA" placeholder="Ex: mês passado" >
+                <input matInput #Q4BDATA="ngModel" name="Q4BDATA" [(ngModel)]="student.Q4BDATA"
+                  placeholder="Ex: mês passado">
               </mat-form-field>
               <mat-form-field class="input-lg">
                 <mat-label i18n="Label">Observações</mat-label>
@@ -674,7 +711,8 @@
                 <mat-checkbox i18n="Label" #Q57="ngModel" name="Q57" [(ngModel)]="student.Q57">Dores nas pernas
                 </mat-checkbox>
                 <mat-checkbox i18n="Label" #Q58="ngModel" name="Q58" [(ngModel)]="student.Q58">Arritemias</mat-checkbox>
-                <mat-checkbox *ngIf="student.sexo == 'F'" i18n="Label" #Q59="ngModel" name="Q59" [(ngModel)]="student.Q59">Tensão pré-menstrual
+                <mat-checkbox *ngIf="student.sexo == 'F'" i18n="Label" #Q59="ngModel" name="Q59"
+                  [(ngModel)]="student.Q59">Tensão pré-menstrual
                 </mat-checkbox>
                 <mat-checkbox i18n="Label" #Q510="ngModel" name="Q510" [(ngModel)]="student.Q510">Dores nas costas
                 </mat-checkbox>
