--- a/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
+++ b/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
@@ -44,10 +44,17 @@
                                 step="0.1">
                         </td>
                     </tr>
-
-
                     <tr>
-                        <th>Massa Gorda</th>
+                        <th>Gordura Total <small>(kg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura_bl}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura_bl}}</td>
+                        <td *ngIf="addEval">
+                            <input name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Massa Gorda <small>(kg)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_gorda}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].massa_gorda}}</td>
                         <td *ngIf="addEval">
@@ -56,7 +63,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Massa Magra</th>
+                        <th>Massa Magra <small>(kg)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_magra}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].massa_magra}}</td>
                         <td *ngIf="addEval">
@@ -65,7 +72,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Gordura Visceral</th>
+                        <th>Gordura Visceral <small>(kg)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
                         <td *ngIf="addEval">
@@ -73,6 +80,54 @@
                                 [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
                         </td>
                     </tr>
+
+                    <tr><th class="form-subtitle">Massa Muscular</th></tr>
+                    <tr>
+                        <th>Membros Superiores Drt <small>(kg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Membros Superiores Esq <small>(kg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Membros Inferiores Drt <small>(kg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Membros Inferiores Esq <small>(kg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Tronco <small>(kg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+
                     <tr>
                         <th>Taxa Metabólica Basal</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].tmb}}</td>
@@ -100,7 +155,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Peso Desejado</th>
+                        <th>Peso Desejado <small>(kg)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso_desejado}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peso_desejado}}</td>
                         <td *ngIf="addEval">
@@ -117,7 +172,16 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Água Corporal Total</th>
+                        <th>Água Extracelular <small>(kg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].agua_corporal_total}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].agua_corporal_total}}</td>
+                        <td *ngIf="addEval">
+                            <input name="agua_corporal_total" #agua_corporal_total="ngModel"
+                                [(ngModel)]="newEvaluation.agua_corporal_total" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Água Corporal Total <small>(kg)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].agua_corporal_total}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].agua_corporal_total}}</td>
                         <td *ngIf="addEval">
@@ -127,6 +191,15 @@
                     </tr>
                     <tr>
                         <th>Impedância</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].impedancia}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].impedancia}}</td>
+                        <td *ngIf="addEval">
+                            <input name="impedancia" #impedancia="ngModel" [(ngModel)]="newEvaluation.impedancia"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Relação AT/AEC</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].impedancia}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].impedancia}}</td>
                         <td *ngIf="addEval">
