--- a/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
+++ b/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
@@ -1,10 +1,199 @@
 <div class="container">
     <div class="header">
-        <h1>DEXA</h1>
+        <h3>DEXA</h3>
     </div>
     <div class="section">
+        <form #f="ngForm" (submit)="save(f.value)">
+            <!-- <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura"> -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">
+                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
+                                {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">
+                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer])">
+                                {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="addEval">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                style="width: 110px;">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th><span>Peso</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peso}}</td>
+                        <td *ngIf="addEval">
+                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>% Gordura</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura_bl}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura_bl}}</td>
+                        <td *ngIf="addEval">
+                            <input name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>DMO <small>(g/cm2)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura_bl}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura_bl}}</td>
+                        <td *ngIf="addEval">
+                            <input name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>FAT <small>(g)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_gorda}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].massa_gorda}}</td>
+                        <td *ngIf="addEval">
+                            <input name="massa_gorda" #massa_gorda="ngModel" [(ngModel)]="newEvaluation.massa_gorda"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>LEAN <small>(g)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_magra}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].massa_magra}}</td>
+                        <td *ngIf="addEval">
+                            <input name="massa_magra" #massa_magra="ngModel" [(ngModel)]="newEvaluation.massa_magra"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Cabeça</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
 
+                    <tr>
+                        <th>Membros Superiores</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Membros Inferiores</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Coluna</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Tronco</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <th>Pelve</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tmb}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].tmb}}</td>
+                        <td *ngIf="addEval">
+                            <input name="tmb" #tmb="ngModel" [(ngModel)]="newEvaluation.tmb" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Costelas</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].reactancia}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].reactancia}}</td>
+                        <td *ngIf="addEval">
+                            <input name="reactancia" #reactancia="ngModel" [(ngModel)]="newEvaluation.reactancia"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Total</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].estrutura_ossea}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].estrutura_ossea}}</td>
+                        <td *ngIf="addEval">
+                            <input name="estrutura_ossea" #estrutura_ossea="ngModel"
+                                [(ngModel)]="newEvaluation.estrutura_ossea" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>T escore</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso_desejado}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peso_desejado}}</td>
+                        <td *ngIf="addEval">
+                            <input name="peso_desejado" #peso_desejado="ngModel"
+                                [(ngModel)]="newEvaluation.peso_desejado" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Z escore</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].naf}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].naf}}</td>
+                        <td *ngIf="addEval">
+                            <input name="naf" #naf="ngModel" [(ngModel)]="newEvaluation.naf" type="number" step="0.1">
+                        </td>
+                    </tr>
+              
+                </tbody>
+            </table>
+
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                    <mat-icon class="mat-18">add</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                    <mat-icon class="mat-18">close</mat-icon>
+                </button>
+                <button *ngIf="addEval" mat-fab>
+                    <mat-icon class="mat-18">check</mat-icon>
+                </button>
+            </div>
+        </form>
+ 
+<!--         <div class="graphics">
+            <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="chartValues" [gradient]="gradient"
+                [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut"
+                >
+            </ngx-charts-pie-chart>
+        </div> -->
     </div>
+
     <div class="footer">
         <a mat-mini-fab color="primary" (click)="goBack()">
             <mat-icon>undo</mat-icon>
