--- a/src/app/avaliation/composicao-corporal/dexa/dexa.component.scss
+++ b/src/app/avaliation/composicao-corporal/dexa/dexa.component.scss
@@ -1,4 +1,33 @@
 .section {
-    flex-direction: column;
-    justify-content: start;
+  flex-direction: column;
+  justify-content: start;
+  
+  table {
+    width: 100%;
   }
+  th,
+  td {
+    height: 28px;
+    // background-color: blanchedalmond;
+    border-bottom: 1px #999 solid;
+    text-align: center;
+  }
+  th {
+    font-weight: 500 !important;
+    text-align: left;
+    padding-left: 5px;
+  }
+  .th-top {
+    text-align: center;
+  }
+  td > input {
+    width: 60px;
+  }
+}
+
+.form-subtitle{
+  text-align: start;
+  font-size: small;
+  color: blue;
+}
+
