--- a/src/app/avaliation/composicao-corporal/scaner/scaner.component.html
+++ b/src/app/avaliation/composicao-corporal/scaner/scaner.component.html
@@ -1,13 +1,145 @@
 <div class="container">
     <div class="header">
-        <h1>SCANER</h1>
+        <h3>SCANER</h3>
     </div>
     <div class="section">
+        <form #f="ngForm" (submit)="save(f.value)">
+          <!--   <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura"> -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">
+                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
+                                {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">
+                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer])">
+                                {{evaluation[pointer].data | date:'dd-LL-yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="addEval">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                style="width: 110px;">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><th class="form-subtitle">Tríceps</th></tr>
+                    <tr>
+                        <th><span>Qualidade Muscular</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peso}}</td>
+                        <td *ngIf="addEval">
+                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>% Gordura</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura_bl}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura_bl}}</td>
+                        <td *ngIf="addEval">
+                            <input name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
 
+                    <tr><th class="form-subtitle">Abdominal</th></tr>
+                    <tr>
+                        <th>Qualidade Muscular</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura_bl}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura_bl}}</td>
+                        <td *ngIf="addEval">
+                            <input name="perc_gordura_bl" #perc_gordura_bl="ngModel" [(ngModel)]="newEvaluation.perc_gordura_bl" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>% Gordura</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_gorda}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].massa_gorda}}</td>
+                        <td *ngIf="addEval">
+                            <input name="massa_gorda" #massa_gorda="ngModel" [(ngModel)]="newEvaluation.massa_gorda"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr><th class="form-subtitle">Quadríceps</th></tr>
+                    <tr>
+                        <th>Qualidade Muscular</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].massa_magra}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].massa_magra}}</td>
+                        <td *ngIf="addEval">
+                            <input name="massa_magra" #massa_magra="ngModel" [(ngModel)]="newEvaluation.massa_magra"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>% Gordura</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+
+                    <tr><th class="form-subtitle">Total</th></tr>
+                    <tr>
+                        <th>Qualidade Muscular</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>% Gordura</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].gordura_visceral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].gordura_visceral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="gordura_visceral" #gordura_visceral="ngModel"
+                                [(ngModel)]="newEvaluation.gordura_visceral" type="number" step="0.1">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                    <mat-icon class="mat-18">add</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                    <mat-icon class="mat-18">close</mat-icon>
+                </button>
+                <button *ngIf="addEval" mat-fab>
+                    <mat-icon class="mat-18">check</mat-icon>
+                </button>
+            </div>
+        </form>
+ 
+<!--         <div class="graphics">
+            <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="chartValues" [gradient]="gradient"
+                [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut"
+                >
+            </ngx-charts-pie-chart>
+        </div> -->
     </div>
+
     <div class="footer">
         <a mat-mini-fab color="primary" (click)="goBack()">
             <mat-icon>undo</mat-icon>
         </a>
     </div>
 </div>
+
