--- a/src/app/avaliation/evaluation/evaluation.component.scss
+++ b/src/app/avaliation/evaluation/evaluation.component.scss
@@ -7,7 +7,11 @@
 }
 
 form {
-  background-color: rgba(245, 253, 245, 0.704);
-  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(245, 245, 245, 0.7);
+  width: 500px;
+  height: 400px;
   padding: 15px;
+  border-radius: 7px;
 }
