--- a/src/app/avaliation/CardioPulmunar/banco/banco.component.html
+++ b/src/app/avaliation/CardioPulmunar/banco/banco.component.html
@@ -43,8 +43,8 @@
                     <!--  resultados -->
                     <tr>
                         <th i18n>FC Estimada</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcestimada}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcestimada}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
@@ -55,8 +55,8 @@
                     </tr>
                     <tr>
                         <th i18n>% FC Máx. Alcançada</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcmax}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcmax}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_percfcm}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_percfcm}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
