--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -543,7 +543,7 @@
               </mat-form-field>
             </mat-card-content>
           </mat-card>
-
+         <!--  Bebida -->
           <mat-card>
             <mat-card-content>
               <mat-label i18n>Álcool</mat-label>
