--- a/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
+++ b/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
@@ -60,6 +60,95 @@
             </button>
         </div>
 
+        <div class="section-info">
+            <h4>Classificação de Risco</h4>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Idade</th>
+                        <th>Baixo</th>
+                        <th>Moderado</th>
+                        <th>Alto</th>
+                        <th>Muito Alto</th>
+                    </tr>
+                </thead>
+                <tbody *ngIf="student.sexo=='M'">
+                    <tr>
+                        <th>20 - 29</th>
+                        <td>&lt; 0,83</td>
+                        <td>0,83 - 0,88</td>
+                        <td>0,89 - 0,94</td>
+                        <td>&gt; 0,94</td>
+                    </tr>
+                    <tr>
+                        <th>30 - 39</th>
+                        <td>&lt; 0,84</td>
+                        <td>0,84 - 0,91</td>
+                        <td>0,92 - 0,96</td>
+                        <td>&gt; 0,96</td>
+                    </tr>
+                    <tr>
+                        <th>40 - 49</th>
+                        <td>&lt; 0,88</td>
+                        <td>0,88 - 0,95</td>
+                        <td>0,96 - 1,00</td>
+                        <td>&gt; 1,00</td>
+                    </tr>
+                    <tr>
+                        <th>50 - 59</th>
+                        <td>&lt; 0,90</td>
+                        <td>0,90 - 0,95</td>
+                        <td>0,96 - 1,02</td>
+                        <td>&gt; 1,02</td>
+                    </tr>
+                    <tr>
+                        <th>60 - 69</th>
+                        <td>&lt; 0,91</td>
+                        <td>0,91 - 0,98</td>
+                        <td>0,99 - 1,03</td>
+                        <td>&gt; 1,03</td>
+                    </tr>
+                </tbody>
+                <tbody *ngIf="student.sexo=='F'">
+                    <tr>
+                        <th>20 - 29</th>
+                        <td>&lt; 0,71</td>
+                        <td>0,71 - 0,77</td>
+                        <td>0,78 - 0,82</td>
+                        <td>&gt; 0,82</td>
+                    </tr>
+                    <tr>
+                        <th>30 - 39</th>
+                        <td>&lt; 0,72</td>
+                        <td>0,72 - 0,78</td>
+                        <td>0,79 - 0,84</td>
+                        <td>&gt; 0,84</td>
+                    </tr>
+                    <tr>
+                        <th>40 - 49</th>
+                        <td>&lt; 0,73</td>
+                        <td>0,73 - 0,79</td>
+                        <td>0,80 - 0,87</td>
+                        <td>&gt; 0,87</td>
+                    </tr>
+                    <tr>
+                        <th>50 - 59</th>
+                        <td>&lt; 0,74</td>
+                        <td>0,74 - 0,81</td>
+                        <td>0,82 - 0,88</td>
+                        <td>&gt; 0,88</td>
+                    </tr>
+                    <tr>
+                        <th>60 - 69</th>
+                        <td>&lt; 0,76</td>
+                        <td>0,76 - 0,83</td>
+                        <td>0,84 - 0,90</td>
+                        <td>&gt; 0,90</td>
+                    </tr>
+                </tbody>
+            </table>
+            <em>Fonte: Heyward. V. & Stolarkcyz. Applied Body Composition Assessment, 1996</em>
+        </div>
 
     </div>
 
