--- a/src/app/avaliation/risco/rdc/rdc.component.scss
+++ b/src/app/avaliation/risco/rdc/rdc.component.scss
@@ -33,3 +33,16 @@
     justify-content: space-between;
 }
 
+.mat-card-resultado{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(117, 132, 218);
+    color: white;
+
+    span{
+        font-size: large;
+        font-weight: 600;
+    }
+
+}
